test/spec_vectors/br_on_cast/fail/module_7.wat
(module (func (result anyref) (br_on_cast 0 structref arrayref (unreachable))))